unpackaged/main/default/objects/Project_Contact__c/Project_Contact__c.object-meta.xml
<CustomObject>
    <label>Project Contact</label>
    <nameField>
        <displayFormat>PC-{0000000000}</displayFormat>
        <label>Project Contacts Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>