unpackaged/main/default/objects/Project_Contact__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>HYPERLINK("/" &amp; Contact__r.Id, Contact__r.FirstName &amp; " " &amp; Contact__r.LastName ,"_self")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>