unpackaged/main/default/objects/Project_Contact__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Changes this Contact to the Primary Contact for this Project</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>